--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -36,8 +36,7 @@ $helperMemberScore = new Default_View_Helper_FetchMemberScore();
 
 $isSupporter = $this->stat['donationIssupporter'];
 
-$config = Zend_Registry::get('config');
-$plingcatid = $config->settings->member->plingcat->id;
+
 ?>
     <main class="about-me-page">
 
@@ -90,14 +89,14 @@ $plingcatid = $config->settings->member->plingcat->id;
                                        <span class="cnt"><?=$this->stat['cntComments']?> </span> Comments
                                     </div>
 
-                                    <?php if($this->member->member_id != $plingcatid):?>
+                                   
                                     <div class="row">
                                        Plinged <span class="cnt"> <?=$this->stat['cntPlingsHeGave']?> </span>Products
                                     </div>
                                     <div class="row">
                                        Got <span class="cnt"> <?=$this->stat['cntPlingsHeGot']?> </span><img  src="/images/system/pling-btn-active.png" style="width:20px; height:20px" />
                                     </div>
-                                <?php endif; ?>
+                               
 
                                     <div class="row">
                                        Likes <span class="cnt"> <?=$this->stat['cntLikesHeGave']?> </span>Products
@@ -155,10 +154,6 @@ $plingcatid = $config->settings->member->plingcat->id;
                                 <a id="linktohive" target="_blank" href="http://cp1.hive01.com/usermanager/search.php?username=<?= $this->member->username ?>">link to hive</a>
                                 <a id="delete-this" href="/backend/user/delete?member_id=<?= $this->member->member_id ?>">delete user</a>
                                 </span>
-                                <br>
-                                <span class="page-views" style="color: red;">
-                                    <input type="checkbox" id="pling-excluded-checkbox" <?php echo $this->member->pling_excluded == 1 ? ' checked=\'checked\' ' : ''; ?> />  user-pling-excluded
-                                </span>
                                 <script>
                                     $('#delete-this').on('click', function (event) {
 
@@ -171,38 +166,6 @@ $plingcatid = $config->settings->member->plingcat->id;
                                                 alert('User deleted successfully');
                                             },
                                             error: function() {
-                                                alert('Service is temporarily unavailable.');
-                                            }
-                                        });
-
-                                        return false;
-                                    });
-                                    
-                                    $('#pling-excluded-checkbox').on('click', function (event) {
-                                        event.stopPropagation();
-                                        var status = 0;
-                                        if (this.checked) {
-                                            status = 1;
-                                        } else {
-                                            status = 0;
-                                        }
-
-                                        var target = "/backend/member/doexclude?member_id=<?= $this->member->member_id ?>&pling_excluded=" + status;
-                                        $.ajax({
-                                            url: target,
-                                            success: function (results) {
-                                                if (status == 0) {
-                                                    alert('Member was successfully included for plinging');
-                                                    $('#pling-excluded-checkbox').prop("checked", false);
-
-                                                } else {
-                                                    alert('Member was successfully excluded for plinging');
-                                                    $('#pling-excluded-checkbox').prop("checked", true);
-
-                                                }
-
-                                            },
-                                            error: function () {
                                                 alert('Service is temporarily unavailable.');
                                             }
                                         });
@@ -286,7 +249,7 @@ $plingcatid = $config->settings->member->plingcat->id;
                             </li>
                           <?php } ?>
 
-                          <?php if(($this->member->member_id != $plingcatid) && $this->plings->getTotalItemCount()>0){ ?>
+                          <?php if( $this->plings->getTotalItemCount()>0){ ?>
                             <li>
                                 <a href="#user-plings" data-toggle="tab" role="tab"  aria-controls="user-plings">
                                     Plinged (<?=$this->plings->getTotalItemCount()?>)
@@ -294,7 +257,7 @@ $plingcatid = $config->settings->member->plingcat->id;
                             </li>
                           <?php } ?>
 
-                          <?php if(($this->member->member_id != $plingcatid) && $this->supportersplings->getTotalItemCount()>0){ ?>
+                          <?php if( $this->supportersplings->getTotalItemCount()>0){ ?>
                             <li>
                                 <a href="#supporters-plings" data-toggle="tab" role="tab"  aria-controls="supporters-plings">
                                     Supporters (<?=$this->supportersplings->getTotalItemCount()?>)
@@ -371,7 +334,7 @@ $plingcatid = $config->settings->member->plingcat->id;
                             </div> 
                             <?php } ?>  
 
-                            <?php if(($this->member->member_id != $plingcatid) && $this->plings->getTotalItemCount()>0){ ?>
+                            <?php if( $this->plings->getTotalItemCount()>0){ ?>
                             <div  role="tabpanel" class="tab-pane " id="user-plings">       
                                     <div class="my-fav-list">                                                                   
                                   <?php echo $this->render('user/partials/aboutme-plings.phtml'); ?>
@@ -379,7 +342,7 @@ $plingcatid = $config->settings->member->plingcat->id;
                             </div> 
                             <?php } ?>  
 
-                            <?php if(($this->member->member_id != $plingcatid) && $this->supportersplings->getTotalItemCount()>0){ ?>
+                            <?php if($this->supportersplings->getTotalItemCount()>0){ ?>
                             <div  role="tabpanel" class="tab-pane " id="supporters-plings">       
                                     <div class="my-fav-list">                                                                   
                                         <?php echo $this->render('user/partials/aboutme-supporters.phtml'); ?>       
