--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -168,18 +168,19 @@ $helperImage = new Default_View_Helper_Image();
                        data-toggle="modal"><?= $this->translate('Verification') ?></a>
                 <?php } ?>
 
-              
+              <?php /*
                  <a href="#modal-box-code-<?= $loopProductId ?>"
                    class="btn btn-native"
                    data-toggle="modal"><?= $this->translate('Box') ?></a>
-                  
+                  */
+                   ?>
                   
 
                 <!-- /updates -->
                 <span class="publish-product-wrapper">
                     <?php $p_action = $this->isProjectActive($this->project_status) ? 'unpublish' : 'publish' ?>
                     <a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, $p_action, array('m' => $this->member_id)) ?>"
-                       class="btn btn-native btn-pling-red" data-target="#<?= $loopProductId ?> .publish-product-wrapper">
+                       class="btn btn-native <?=($p_action=='unpublish')?'btn-pling-green':'btn-pling-red'?> " data-target="#<?= $loopProductId ?> .publish-product-wrapper">
                         <?=ucfirst($p_action) ?>
                     </a>
                 </span>
@@ -229,6 +230,7 @@ $helperImage = new Default_View_Helper_Image();
 
     <!-- box code modal -->
 
+    <?php /*
     <div id="modal-box-code-<?= $loopProductId ?>" class="code-embed-modal modal fade">
         <div class="modal-dialog content-modal">
             <div class="modal-content">
@@ -252,7 +254,8 @@ $helperImage = new Default_View_Helper_Image();
             </div>
         </div>
     </div>
-  
+    */
+    ?>
     <!-- /box code modal -->
 
 
