--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -153,6 +153,9 @@ Google fonts
     &.btn-pling-red {
       background-color: #e84310;
     }
+     &.btn-pling-green {
+      background-color: green;
+    }
 
     &.btn-purple {
       background: #9b59b6;
