--- a/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
@@ -2,6 +2,7 @@
     $helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
     $helperImage = new Default_View_Helper_Image();
     $helperPrintDate = new Default_View_Helper_PrintDate();
+    if($this->userProducts == null || count($this->userProducts)==0) return;
     foreach ($this->userProducts as $product): ?>
         <div class="product mini-card col-lg-2 col-md-2 col-sm-3 col-xs-2">
             <div class="u-wrap">
@@ -52,7 +53,6 @@
 <style type="text/css">
         .countplings 
         {
-  
             position: absolute;
             bottom: 10px;
             left: 8px;
@@ -64,7 +64,5 @@
             width: 20px;
             height: 20px;
         }
-
-
 
 </style>
