--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -50,6 +50,7 @@ $helperImage = new Default_View_Helper_Image();
 $helpPrintDate = new Default_View_Helper_PrintDate();
 ?>
 <main id="explore-content" class="startpage-store david-kann-arbeiten" >
+  <p>Hello world</p>
 <div class="GridFlex">
 <div class="GridFlex-cell sidebar-left">
         <?php  echo $this->render('explore/partials/filter.phtml'); ?>
