new workflow "resend verification mail"
updated new workflow "resend verification mail"

--- a/application/modules/default/views/scripts/error/error-clear.phtml
+++ b/application/modules/default/views/scripts/error/error-clear.phtml
@@ -33,18 +33,18 @@
 
 <?php if ('development' == APPLICATION_ENV || 'testing' == APPLICATION_ENV): ?>
 
+    <div>
     <h3>Exception information:</h3>
     <p>
         <b>Message:</b> <?php echo $this->exception->getMessage() ?>
     </p>
 
     <h3>Stack trace:</h3>
-    <pre><?php echo $this->exception->getTraceAsString() ?>
-  </pre>
+    <pre><?php echo $this->exception->getTraceAsString() ?></pre>
 
     <h3>Request Parameters:</h3>
-    <pre><?php echo var_export($this->request->getParams(), true) ?>
-  </pre>
+    <pre><?php echo var_export($this->request->getParams(), true) ?></pre>
+    </div>
 <?php endif ?>
 
 </body>
