--- a/application/modules/default/views/scripts/error/error.phtml
+++ b/application/modules/default/views/scripts/error/error.phtml
@@ -138,6 +138,7 @@ $helperImage = new Default_View_Helper_Image();
                         $displayErrors = $config->phpSettings->display_errors;
                         if (($displayErrors == 1) AND (isset($this->exception))): ?>
 
+                            <div class="col-lg-12 col-md-12">
                             <h3>Exception information:</h3>
                             <p>
                                 <b>Message:</b> <?php echo $this->exception->getMessage() ?>
@@ -157,6 +158,7 @@ $helperImage = new Default_View_Helper_Image();
 
                             <h3>Request Parameters:</h3>
                             <pre><?php echo var_export($this->request->getParams(), true) ?></pre>
+                            </div>
                         <?php endif ?>
                     </div>
                     <!-- /.container -->
