--- a/application/modules/default/views/scripts/partials/footer/template.phtml
+++ b/application/modules/default/views/scripts/partials/footer/template.phtml
@@ -54,14 +54,17 @@
                     <div id="footer-social">
                         <a href="https://www.facebook.com/opendesktop.org"
                            id="facebook"
-                           target="_blank"><img src="/theme/flatui/img/new/f_icon_fb.png"/></a>
+                           target="_blank"
+                           rel="nofollow"><img src="/theme/flatui/img/new/f_icon_fb.png"/></a>
                         <a href="https://twitter.com/opendesktop"
                            id="twitter"
-                           target="_blank"><img src="/theme/flatui/img/new/f_icon_tw.png"/></a>
+                           target="_blank"
+                           rel="nofollow"><img src="/theme/flatui/img/new/f_icon_tw.png"/></a>
                         <a href="https://plus.google.com/115086171173715906631"
                            rel="publisher"
                            id="g-plus"
-                           target="_blank"><img src="/theme/flatui/img/new/f_icon_gp.png"/></a>
+                           target="_blank"
+                           rel="nofollow"><img src="/theme/flatui/img/new/f_icon_gp.png"/></a>
                     </div>
                 </div>
             </div>
