--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -23,6 +23,7 @@
 $users = $this->newUsers($limit = 216,'created_at','DESC');
 $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : null;
+$this->headMeta()->setName('robots', 'noindex, nofollow');
 ?>
   <link href="/theme/flatui/css/bootstrap/social-buttons.css" rel="stylesheet" type="text/css">
   <style>
@@ -48,7 +49,7 @@ $url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : nul
                 <div id="social-login-elements">
                   <div class="register-facebook">
                     <p class="small center light greylight">Login with</p>
-                    <a  href="/login/github/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
+                    <a  href="/login/github/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github" rel="nofollow">
                       <span class="fa fa-github"></span>
                       <span class="small">Github</span>
                     </a>
