--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -2,11 +2,95 @@ out: ../css/style.css, sourcemap: true, compress: true
 
 @import "elements.less";
 
+header div.container.header {
+  height: 110px;
+}
+
 #app-root {
+
+  * {
+    font-family: Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+  }
+
   #template {
     .hp-section {
+      padding: 60px 0;
       background-image: url('../img/hp-section-bg.png');
-      
+
+      h2 {
+        text-transform: uppercase;
+        color: #c1c1c1;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #ccc;
+        width: 100%;
+      }
+
+      &:nth-child(even){
+        background-image: none;
+        background-color: white;
+      }
+    }
+
+    .hp-section + .hp-section {
+      border-top: 1px solid #ccc;
+    }
+
+    img#download-app {
+      border-radius: 21px;
+      width: 100%;
+      height: auto;
+      .transition();
+
+      &:hover {
+        box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+      }
+    }
+
+
+    #become-supporter {
+      color: #fff;
+      background-color: #286090;
+      border-color: #204d74;
+      font-size: 20px;
+      text-align: center;
+      display: table;
+      width: 100%;
+      height: 100%;
+      border-radius: 21px;
+
+      h1 {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 3.5vw;
+      }
+    }
+
+    .grid-image-container {
+      margin-bottom: 15px;
+    }
+
+    .supporter-info-wrapper {
+      .column {
+        img {
+          max-width: 100%;
+          width: 100%;
+          border-radius: 100%;
+          border: 1px solid #c1c1c1;
+        }
+        .supporter-name {
+          display: table;
+          width: 100%;
+          height: 100%;
+          h3 {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+          }
+        }
+      }
     }
   }
 }
