--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -402,7 +402,7 @@ $this->inlineScript()->appendScript(
 
 
                 <div style="float: right; padding-top: 10px;" class="small light">
-                    Deleted files are no longer publicly accessible but number of downloads still kept. *
+                    Deleted files are archived. Number of downloads are kept. *
                 </div>
             </div>
 
