--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -315,7 +315,7 @@ $this->inlineScript()->appendScript('
 
                                                 </div>
                                                 <div style="float: right; padding-top: 10px;" class="small light">
-                                                    Deleted files are no longer publicly accessible but number of downloads still kept. *
+                                                    Deleted files are archived. Number of downloads are kept. *
                                                 </div>
                                             </div>
 
