--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -12,35 +12,36 @@ header div.container.header {
     font-family: Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
   }
 
-  #template {
-    .hp-section {
-      padding: 60px 0;
-      background-image: url('../img/hp-section-bg.png');
+  .hp-section {
+    padding: 60px 0;
+    background-image: url('../img/hp-section-bg.png');
 
-      h2 {
-        text-transform: uppercase;
-        color: #c1c1c1;
-        padding-bottom: 15px;
-        border-bottom: 1px solid #ccc;
-        width: 100%;
-      }
+    h2 {
+      text-transform: uppercase;
+      color: #c1c1c1;
+      padding-bottom: 15px;
+      border-bottom: 1px solid #ccc;
+      width: 100%;
+    }
 
-      &:nth-child(even){
-        background-image: none;
-        background-color: white;
+    &:nth-child(even){
+      background-image: none;
+      background-color: white;
 
-        .grid-image-container {
-          &:hover {
-            background-color: #ccc;
-          }
+      .grid-image-container {
+        &:hover {
+          background-color: url('../img/hp-section-bg.png') !important;
         }
       }
     }
+  }
 
-    .hp-section + .hp-section {
-      border-top: 1px solid #ccc;
-    }
+  .hp-section + .hp-section {
+    border-top: 1px solid #ccc;
+  }
 
+
+  #homepage-version-one {
     img#download-app {
       border-radius: 21px;
       width: 100%;
@@ -74,6 +75,10 @@ header div.container.header {
       }
     }
 
+    img.product-image {
+      width: 100% !important;
+    }
+
     .grid-image-container {
       .transition();
       background-color: transparent;
@@ -82,8 +87,24 @@ header div.container.header {
       > a {
         display: block;
         width: 100%;
-        img {
-          width: 100%;
+        position: relative;
+
+        figure {
+          margin: 0;
+          width: 3vw;
+          height: 3vw;
+          position: absolute;
+          bottom: 1vw;
+          right: 1vw;
+          background: white;
+          border-radius: 100%;
+          overflow: hidden;
+          border: 1px solid #ccc;
+
+          img {
+            width:100%;
+            height: 100%;
+          }
         }
       }
 
